src/test/deca/syntax/invalid/synt/var_name_asm.deca
// @expected_output deca:8:8:
/*
    Description : Test sur un déclaration de variable de nom asm (nom réservé)
    
    Résultat : rejeté à l'analyse syntaxique
*/
{
    int asm = 2;
}
